SERVER-12133 Improve error message when a 2.6 schema user doc is present during the authSchemaUpgrade